<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#EFBF04">

    <!-- App Name -->

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CyDine"
        android:textStyle="bold"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/email_view_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <!-- Email Label -->

    <TextView
        android:id="@+id/email_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="Email:"
        android:textColor="#BD2031"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name" />

    <!-- Email EditText -->

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="@id/email_view_name"
        app:layout_constraintBottom_toBottomOf="@id/email_view_name"
        app:layout_constraintStart_toEndOf="@id/email_view_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp" />

    <!-- Password Label -->

    <TextView
        android:id="@+id/password_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="Password:"
        android:textColor="#BD2031"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_view_name" />

    <!-- Password EditText -->

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="@id/password_view_name"
        app:layout_constraintBottom_toBottomOf="@id/password_view_name"
        app:layout_constraintStart_toEndOf="@id/password_view_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp" />

    <!-- Login Button -->

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Login"
        android:textSize="30sp"
        android:backgroundTint="#BD2031"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_view_name" />

    <!-- Redirect to Sign Up -->

    <TextView
        android:id="@+id/sign_up_redirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Don't have an account? Sign Up"
        android:textSize="16sp"
        android:textColor="#007BFF"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
