...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/active_users_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Active Users: 0"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>
...
